# alpha

./: .dockerignore  .gitignore  AGENTS.md  Agents.md  Cargo.toml  Makefile  PROMPT.md  README.md  file.md  openapi.yaml
.codex/: codex_config.toml
.github/workflows/: ci.yml
config/: sandbox_config.toml
crates/bkg-blockchain/: Cargo.toml
crates/bkg-blockchain/src/: account.rs  crypto.rs  error.rs  lib.rs  neo.rs
crates/bkg-db/: Cargo.toml
crates/bkg-db/migrations/: 0001_init.sql  0002_api_keys.sql  0002_model_registry.sql  0003_key_rotation_events.sql  0003_rls_policies.sql  0005_namespaces.sql  0006_seed_namespaces.sql  0007_seed_api_keys.sql  0008_seed_rls_policies.sql  0009_model_registry.sql  0010_audit_events.sql
crates/bkg-db/migrations_postgres/: 0001_init.sql  0002_api_keys.sql  0003_key_rotation_events.sql  0004_rls_policies.sql  0005_namespaces.sql  0006_seed_namespaces.sql  0007_seed_api_keys.sql  0008_seed_rls_policies.sql  0009_model_registry.sql  0010_audit_events.sql
crates/bkg-db/src/: api.rs  audit.rs  auth.rs  executor.rs  kernel.rs  lib.rs  planner.rs  realtime.rs  rls.rs  sql.rs  storage.rs  telemetry.rs
crates/bkg-db/tests/: postgres_integration.rs
crates/cave-daemon/: Cargo.toml
crates/cave-daemon/src/: audit.rs  auth.rs  lib.rs  main.rs  models.rs  server.rs  telemetry.rs
crates/cave-daemon/src/middleware/: rate_limit.rs
crates/cave-kernel/: Cargo.toml
crates/cave-kernel/src/: audit.rs  isolation.rs  lib.rs
crates/cave-kernel/tests/: audit_linux.rs  isolation_linux.rs  process_runtime.rs
docker/: .env.example  .gitignore  Dockerfile.daemon  Dockerfile.web  README.md  SETUP_COMPLETE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  setup.sh
docs/: Agents.md  FEATURE_ORIGINS.md  NEON_MCP_INTEGRATION.md  PROMPT_BKG_DB.md  Progress.md  api.md  architecture.md  bkg-db.md  ci.md  cli.md  compatibility.md  deployment.md  env.md  file.md  governance.md  operations.md  roadmap.md  security.md  telemetry.md  testing.md
schema/: cave.schema.json
scripts/: generate_openapi.py  generate_sbom.py  generate_slsa.py
tests/security/: conftest.py  test_threat_matrix.py
web/: package-lock.json  package.json  playwright.config.ts
web/admin/: .env.local.example  README.md  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
web/admin/src/app/: globals.css  layout.tsx  page.tsx
web/admin/src/app/(dashboard)/audit/: page.tsx
web/admin/src/app/(dashboard)/blockchain/: page.tsx
web/admin/src/app/(dashboard)/explorer/: page.tsx
web/admin/src/app/(dashboard)/keys/: page.tsx
web/admin/src/app/(dashboard)/models/: page.tsx
web/admin/src/app/(dashboard)/sandboxes/: page.tsx
web/admin/src/app/(dashboard)/telemetry/: page.tsx
web/admin/src/app/(dashboard)/wallet/: page.tsx
web/admin/src/app/auth/token/: page.tsx
web/admin/src/components/: token-context.tsx  token-form.tsx  wallet-connect-modal.tsx
web/admin/src/components/ui/: alert.tsx  button.tsx  card.tsx  index.ts  input.tsx  select.tsx
web/admin/src/lib/: blockchain.ts  walletconnect.ts
web/app/: middleware.ts  package.json  tsconfig.json
web/app/src/app/: globals.css  layout.tsx  page.tsx
web/app/src/app/(dashboard)/history/: page.tsx
web/app/src/app/auth/token/: page.tsx
web/app/src/components/: token-context.tsx  token-form.tsx
web/lib/: api.ts  auth.ts
web/tests/: api-client.spec.ts
web/tests/e2e/: admin-audit.spec.ts  admin-models.spec.ts  admin-rotation.spec.ts  admin-sandboxes.spec.ts  namespace-dashboard.spec.ts
