[workspace]
members = [
    "crates/bkg-db",
    "crates/bkg-blockchain",
    "crates/cave-kernel",
    "crates/cave-daemon",
]
resolver = "2"

default-members = ["crates/cave-daemon"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["BKG Contributors <dev@bkg.example>"]
license = "Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "postgres", "any", "uuid", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
parking_lot = "0.12"
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
hyper = { version = "1", features = ["full"] }
futures = "0.3"
which = "5"
rand = { version = "0.8", features = ["std", "std_rng"] }
sha2 = "0.10"
sqlparser = "0.37"
jsonwebtoken = "9"
base64 = "0.21"
hmac = "0.12"
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic", "trace", "metrics"] }
tracing-opentelemetry = "0.24"

[workspace.metadata]
workspace-description = "BKG Phase-0 Rust workspace (cave kernel, db, daemon)"
