[package]
name = "bkg-db"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
futures.workspace = true
sqlparser.workspace = true
jsonwebtoken.workspace = true
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
jsonschema = "0.17"
