[package]
name = "cave-daemon"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "cave-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bkg-db = { path = "../bkg-db" }
cave-kernel = { path = "../cave-kernel" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rand.workspace = true
sha2.workspace = true
chrono.workspace = true
base64.workspace = true
futures.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry_otlp.workspace = true
tracing_opentelemetry.workspace = true

[dev-dependencies]
tempfile = "3"
