[package]
name = "cave-kernel"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bkg-db = { path = "../bkg-db" }
chrono.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
which.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
